--- a/index.html
+++ b/index.html
@@ -57,10 +57,13 @@
 	<br>
 	<texI>dE<sub>int</sub> = nC<sub>p</sub>dT = -PdV</texI><br>
 	<texI>dE<sub>int</sub> = nC<sub>v</sub>dT = -PdV</texI><br>
-	<texI> => ndT = <fract>-P/C<sub>v</sub></fract> dV</texI><br>
-	<texI> pV = nRT => pdv + Vdp = nrdT</texI><br>
-	<texI> => ndT = <fract>p<sub>dv</sub> + vdp/R</fract></texI><br>
-	<texI> = <fract>p<sub>dv</sub> + vdp/C<sub>p</sub> - C<sub>v</sub></fract></texI><br>
+	<texI> => ndT = <fract>-P/C<sub>v</sub></fract> dV ... (1)</texI><br>
+	<texI> PV = nRT => Pdv + VdP = nrdT</texI><br>
+	<texI> => ndT = <fract>P<sub>dv</sub> + vdP/R</fract></texI><br>
+	<texI> = <fract>P<sub>dv</sub> + vdP/C<sub>p</sub> - C<sub>v</sub></fract> ... (2)</texI><br>
+	<texI>(1) = (2) => <fract>dP/P</fract> + (<fract>C<sub>p</sub>/C<sub>v</sub></fract>)(<fract>dV/V</fract>) = 0</texI><br>
+	<texI> => lnP + (<fract>C<sub>p</sub>/C<sub>v</sub></fract>) lnV = k</texI><br>
+	<texI> => PV<sup>γ</sup> = const #</texI><br>
 
 </div>
 
