--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<img src="res/Brewster angle.png" style="width:50%" alt=""/>
 	<p>
 		\(入射角(\theta_{B})+反射角(\theta_{r})=90\degree\)<br>
-		\(n_1 sin(\theta_{B})=n_1 sin(\theta_{r})=n_2 sin(\frac{\pi}{2}-\theta_{B})\)<br>
+		\(n_1 sin(\theta_{B})=n_2 sin(\theta_{r})=n_2 sin(\frac{\pi}{2}-\theta_{B})\)<br>
 		\(=n_2 cos(\theta_{B})\)<br>
 		\(\frac{n_2}{n_1}=tan(\theta_{B})\)<br>
 		\(\theta_{B}=tan^{-1}(\frac{n_2}{n_1})\)<br>
@@ -35,10 +35,10 @@
 	<h4>Ordering of magnetic dipole</h4>
 	<img src="res/ordering of magnetic dipole.png" style="width:90%" alt=""/>
 	<p>
-		Paramagnetism 順磁<br>
-		Ferromagnetism 鐵磁<br>
-		Ferrimagnetism 亞鐵磁<br>
-		Antiferromagnetism 反鐵磁
+		Paramagnetic 順磁<br>
+		Ferromagnetic 鐵磁<br>
+		Ferrimagnetic 亞鐵磁<br>
+		Antiferromagnetic 反鐵磁
 	</p>
 </div>
 
@@ -53,8 +53,8 @@
 		current \(i=4.6mA\).<br>
 		<img src="res/q0_img.png" alt="">
 		<br>
-		\(dF_h=iB cos\theta ds\)<br>
-		\(dF_y=iB sin\theta ds\)<br>
+		\(dF_h=(iB cos\theta) ds\)<br>
+		\(dF_y=(iB sin\theta) ds\)<br>
 		\(F_v=iB sinθ\int ds = 2πaiB sinθ\)<br>
 		\(= 2π(0.018m)(4.6×10^{−3}A)(3.4×10^{−3}T) sin20\degree\)<br>
 		\(= 6.0×10^{−7}N\)
@@ -72,7 +72,7 @@
 		<img src="res/q1_img.png" alt="">
 		<br>
 		$$B_i=\frac{\mu_0 i\phi}{4 \pi R} + \frac{\mu_0 i\phi}{4 \pi r}$$
-		$$B^2_f=B^2_z+B^2_y=\frac{\mu_0 i\phi}{4 \pi R} + \frac{\mu_0 i\phi}{4 \pi r}$$
+		$$B^2_f=B^2_z+B^2_y=(\frac{\mu_0 i\phi}{4 \pi R})^2 + (\frac{\mu_0 i\phi}{4 \pi r})^2$$
 		$$(\frac{B_i}{B_f})^2=\frac{[(1/R)+(1/r)]^2}{(1/R)^2+(1/r)^2}$$
 		$$\frac{B_i}{B_f}=12/10=1.2$$
 		$$r=R\frac{1\pm 1.2\sqrt{2-1.2^2}}{1.2^2-1}=$$ 2.3cm or 43.1cm<br>
@@ -117,7 +117,7 @@
 		\(\psi=2(θ-θ_2)\)<br>
 		\(\psi=2(θ-\phi/2)\)<br>
 		\(θ=(\phi+\psi)/2\)<br>
-		$$n=\frac{sinθ}{cosθ_2}=\frac{sin\frac{1}{2}(\phi+\psi)}{sin\frac{1}{2}\phi}$$
+		$$n=\frac{sinθ}{sinθ_2}=\frac{sin\frac{1}{2}(\phi+\psi)}{sin\frac{1}{2}\phi}$$
 	</p>
 </div>
 
