--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
 <div class="chapters" id="q4">
 	<h4>Example 4</h4>
 	<p>
+		Matter waves物質波 用Schrödinger's equation薛丁格方程式<br>
 		he function \(ψ(x)\) displayed in Eq. 38−27 can describe a free particle, for which the potential energy is \(U(x)=0\) in Schrödinger's
 		equation (Eq. 38-19). Assume now that
 		\(U(x)=U_0 = a\) constant in that equation. Show that Eq. 38−27 is a solution of Schrödinger's equation, with
